--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,4 +1,4 @@
-<div class="codespaces">
+p<div class="codespaces">
   <header class="codespaces-header">
     <img class="codespaces-logo"
          src="railstutorial.png"
