--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
+      <%= debug(params) if Rails.env.development? =%>
     </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
+y user.attributes
