--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,14 @@
       <% end %>
       
       <h1>
-        <%= gravatar_for @user, size: 50 %>
+        <%= gravatar_for @user, size: 80 %>
         <%= @user.name %>
       </h1>
     </section>
   </aside>
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>Microposts <%= user.microposts.count %> </h3>
+      <h3> Microposts (<%= @user.microposts.count %>) </h3>
       
       <ol class="microposts">
         <%= render @microposts %>
