--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,6 @@
 <% provide(:title, "Home") %>
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
-                      "https://rubyonrails.org/" %>
-<%#= link_to image_tag("kitten.jpg", alt: "cute kitten image", width: "200"),
-                      "#" %>
+<% if logged_in? %>
+  <%= render 'static_pages/logged_in_user_home' %>
+<% else %>
+  <%= render 'non_logged_in_user_home' %>
+<% end %>
